--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://case-db.cahwr2upxfq3.sa-east-1.rds.amazonaws.com:3306/case_itau
 spring.datasource.username=admin
-spring.datasource.password=12365902
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
 
